fix flip box on safari

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -734,10 +734,80 @@ a {
   color: #fff;
 }
 
-
 /* ===================================
     Services-Section
 ====================================== */
+
+/*.services-section {*/
+/*  width: 100%;*/
+/*  float: left;*/
+/*  padding-top: 120px;*/
+/*  padding-bottom: 20px;*/
+/*  background-color: #f6f6f6;*/
+/*}*/
+
+/*.services-section .flip-boxes {*/
+/*  margin-top: 65px;*/
+/*}*/
+
+/*.flip-box {*/
+/*  background-color: transparent;*/
+/*  width: 350px;*/
+/*  height: 300px;*/
+/*  border-radius: 20px;*/
+/*  border: 1px solid #f1f1f1;*/
+/*  perspective: 1000px;*/
+/*}*/
+
+/*.flip-box-inner {*/
+/*  position: relative;*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  cursor: pointer;*/
+/*  text-align: center;*/
+/*  transition: transform 0.8s;*/
+/*  transform-style: preserve-3d;*/
+/*  -ms-transform-style: preserve-3d;*/
+/*  -webkit-transform-style: preserve-3d;*/
+/*  -moz-transform-style: preserve-3d;*/
+/*  -o-transform-style: preserve-3d;*/
+/*}*/
+
+/*.flip-box .flip-box-front {*/
+/*  background-color: #fff;*/
+/*  border-radius: 20px;*/
+/*  -webkit-backface-visibility: hidden;*/
+/*  backface-visibility: hidden;*/
+/*}*/
+
+/*.flip-box .blue-box .flip-box-back {*/
+/*  background-color: #032a58;*/
+/*  transform: rotateX(180deg);*/
+/*  -ms-transform: rotateX(180deg);*/
+/*  -webkit-transform: rotateX(180deg);*/
+/*  -moz-transform: rotateX(180deg);*/
+/*  -o-transform: rotateX(180deg);*/
+/*  -webkit-backface-visibility: hidden;*/
+/*  backface-visibility: hidden;*/
+/*}*/
+
+/*.flip-box:hover .flip-box-inner {*/
+/*  transform: rotateX(180deg);*/
+/*}*/
+
+/*.flip-box-front,*/
+/*.flip-box-back {*/
+/*  position: absolute;*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  border-radius: 20px;*/
+/*  backface-visibility: hidden;*/
+/*}*/
+
+/*.flip-box-back {*/
+/*  background-color: #0b4a1a;*/
+/*  transform: rotateX(180deg);*/
+/*}*/
 
 .services-section {
   width: 100%;
@@ -761,27 +831,38 @@ a {
 }
 
 .flip-box-inner {
-  position: relative;
   width: 100%;
   height: 100%;
   cursor: pointer;
   text-align: center;
   transition: transform 0.8s;
+  -ms-transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -o-transform-style: preserve-3d;
   transform-style: preserve-3d;
 }
 
 .flip-box .flip-box-front {
   background-color: #fff;
   border-radius: 20px;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .flip-box .blue-box .flip-box-back {
   background-color: #032a58;
-  transform: rotateX(180deg);
+  -ms-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .flip-box:hover .flip-box-inner {
-  transform: rotateX(180deg);
+  transform: rotateY(180deg);
 }
 
 .flip-box-front,
@@ -795,7 +876,7 @@ a {
 
 .flip-box-back {
   background-color: #0b4a1a;
-  transform: rotateX(180deg);
+  transform: rotateY(180deg);
 }
 
 .flip-box .flip-box-back i {
